wip: refactor of flux-go
This refactors flux-go so it better can provide two use cases:

flux as a service "FaaS" (ha), meaning a grpc server with access
to a flux handle. And then go bindings / sdk to core flux operations.
Both assume that there is a flux handle somewhere we want to interact
with. For the latter, I think the easiest thing will generally
be to use rpc pack and unpack, written as c functions in the go code
(via cgo). The reason is because the functions are variadic and thus
could not be called directly from cgo. If we try to use functions
directly that return a flux future, to "get" that we need to handle
some weird const void **result and I just have no idea.

Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,7 +10,7 @@ ENV USERNAME=${USERNAME}
 ENV USER_UID=${USER_UID}
 ENV USER_GID=${USER_GID}
 USER root
-RUN apt-get update && apt-get install -y jq less bats gnupg2
+RUN apt-get update && apt-get install -y jq less bats gnupg2 protobuf-compiler
 
 # flux removed czmq
 RUN /bin/bash -c "echo \"deb http://download.opensuse.org/repositories/network:/messaging:/zeromq:/release-stable/Debian_9.0/ ./\" >> /etc/apt/sources.list && \
@@ -21,8 +21,8 @@ RUN /bin/bash -c "echo \"deb http://download.opensuse.org/repositories/network:/
 ENV LD_LIBRARY_PATH=/usr/local/lib
 
 # Install Go (if Go bindings desired)
-RUN wget https://go.dev/dl/go1.20.2.linux-amd64.tar.gz && \
-    tar -C /usr/local -xzf go1.20.2.linux-amd64.tar.gz
+RUN wget https://go.dev/dl/go1.22.6.linux-amd64.tar.gz && \
+    tar -C /usr/local -xzf go1.22.6.linux-amd64.tar.gz
       
 ENV PATH=$PATH:/usr/local/go/bin:/home/vscode/go/bin
 
