--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
           ]
         },
         "extensions": [
-          "GitHub.vscode-pull-request-github",
+            "GitHub.vscode-pull-request-github",
+            "golang.go"
         ]
       }
     },
