feat: add python grpc service
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,8 @@
         },
         "extensions": [
             "GitHub.vscode-pull-request-github",
-            "golang.go"
+            "golang.go",
+            "ms-python.python"
         ]
       }
     },
