add python docker build
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/python/v1/Dockerfile
+++ b/python/v1/Dockerfile
@@ -1,10 +1,10 @@
 FROM fluxrm/flux-sched:jammy
 
+# docker build -t ghcr.io/flux-framework/flux-go:python -f ./python/v1/Dockerfile .
+
 USER root
 ENV DEBIAN_FRONTEND=noninteractive
 ENV GO_VERSION=1.21.9
-
-RUN apt-get update && apt-get clean -y && apt -y autoremove
 
 # Install go
 RUN wget https://go.dev/dl/go${GO_VERSION}.linux-amd64.tar.gz  && tar -xvf go${GO_VERSION}.linux-amd64.tar.gz && \
@@ -17,9 +17,10 @@ RUN flux keygen
 RUN git clone https://github.com/flux-framework/flux-sched.git /opt/flux-sched
 
 # Go dependencies for protobuf
-RUN apt -y update && apt -y upgrade && apt install --no-install-recommends -y gnupg2 protobuf-compiler curl && \
+RUN apt -y update && apt -y upgrade && apt install --no-install-recommends -y gnupg2 protobuf-compiler python3-pip curl && \
     go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26 && \
-    go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1
+    go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1 && \
+    apt-get clean -y && apt -y autoremove
 
 # flux removed czmq
 RUN /bin/bash -c "echo \"deb http://download.opensuse.org/repositories/network:/messaging:/zeromq:/release-stable/Debian_9.0/ ./\" >> /etc/apt/sources.list && \
@@ -33,9 +34,11 @@ COPY . /code
 
 RUN go mod tidy && \
     go mod vendor && \
-    make server FLUX_SCHED_ROOT=/opt/flux-sched
+    make server FLUX_SCHED_ROOT=/opt/flux-sched && \
+    mv /code/bin/flux-grpc-server /usr/bin/flux-grpc-server && \
+    python3 -m pip install /code/python/v1 && \
+    mv $(which flux-grpc) /usr/libexec/flux/cmd/flux-grpc.py
 
 RUN make server
 EXPOSE 51003
 EXPOSE 4242
-ENTRYPOINT ["flux", "start", "/code/bin/flux-grpc-server"]
